--- a/delete.html
+++ b/delete.html
@@ -74,42 +74,21 @@
             color: #1967d2;
             margin: 0;
         }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        label {
-            display: block;
-            font-weight: 500;
-            margin-bottom: 5px;
-            color: #202124;
-        }
-        input[type="email"],
-        textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
+        .email-box {
+            background: #f8f9fa;
+            padding: 25px;
             border-radius: 8px;
-            font-size: 16px;
-            font-family: inherit;
+            text-align: center;
+            margin: 30px 0;
         }
-        input[type="email"]:focus,
-        textarea:focus {
-            outline: none;
-            border-color: #1a73e8;
-            box-shadow: 0 0 0 2px rgba(26,115,232,0.2);
+        .email-box a {
+            font-size: 1.25rem;
+            color: #1a73e8;
+            text-decoration: none;
+            font-weight: 500;
         }
-        textarea {
-            resize: vertical;
-            min-height: 100px;
-        }
-        .checkbox-group {
-            display: flex;
-            align-items: flex-start;
-            gap: 10px;
-            margin: 20px 0;
-        }
-        .checkbox-group input {
-            margin-top: 4px;
+        .email-box a:hover {
+            text-decoration: underline;
         }
         .btn {
             display: inline-block;
@@ -123,17 +102,11 @@
             cursor: pointer;
             text-decoration: none;
             transition: background 0.2s;
+            margin-top: 15px;
         }
         .btn:hover {
             background: #b71c1c;
-        }
-        .btn-secondary {
-            background: #f1f3f4;
-            color: #5f6368;
-            margin-left: 10px;
-        }
-        .btn-secondary:hover {
-            background: #e8eaed;
+            color: white;
         }
         .footer {
             text-align: center;
@@ -149,21 +122,6 @@
         }
         a:hover {
             text-decoration: underline;
-        }
-        .success-message {
-            display: none;
-            background: #e6f4ea;
-            padding: 20px;
-            border-radius: 8px;
-            border-left: 4px solid #34a853;
-            margin: 20px 0;
-        }
-        .success-message h3 {
-            color: #137333;
-            margin-bottom: 10px;
-        }
-        .success-message p {
-            color: #137333;
         }
     </style>
 </head>
@@ -197,38 +155,21 @@
             </div>
 
             <h2>Request Account Deletion</h2>
+            <p>To delete your account and all associated data, please send an email to:</p>
             
-            <form id="deleteForm" action="https://formsubmit.co/privacy@buerokratai.de" method="POST">
-                <input type="hidden" name="_subject" value="Account Deletion Request - BürokratAI">
-                <input type="hidden" name="_template" value="table">
-                
-                <div class="form-group">
-                    <label for="email">Email address used for BürokratAI *</label>
-                    <input type="email" id="email" name="email" required placeholder="your.email@gmail.com">
-                </div>
-
-                <div class="form-group">
-                    <label for="reason">Reason for deletion (optional)</label>
-                    <textarea id="reason" name="reason" placeholder="Let us know why you're leaving..."></textarea>
-                </div>
-
-                <div class="checkbox-group">
-                    <input type="checkbox" id="confirm" name="confirm" required>
-                    <label for="confirm">I understand that this action is permanent and all my data will be deleted within 30 days.</label>
-                </div>
-
-                <button type="submit" class="btn">Request Account Deletion</button>
-                <a href="index.html" class="btn btn-secondary">Cancel</a>
-            </form>
-
-            <div class="success-message" id="successMessage">
-                <h3>✅ Request Submitted</h3>
-                <p>Your account deletion request has been received. We will process your request within 30 days and send a confirmation to your email.</p>
+            <div class="email-box">
+                <a href="mailto:alsalman.rami@gmail.com?subject=Account%20Deletion%20Request%20-%20BürokratAI&body=Please%20delete%20my%20BürokratAI%20account.%0A%0AEmail%20used%20for%20registration:%20%0A%0AI%20understand%20this%20action%20is%20permanent.">alsalman.rami@gmail.com</a>
+                <br>
+                <a href="mailto:alsalman.rami@gmail.com?subject=Account%20Deletion%20Request%20-%20BürokratAI&body=Please%20delete%20my%20BürokratAI%20account.%0A%0AEmail%20used%20for%20registration:%20%0A%0AI%20understand%20this%20action%20is%20permanent." class="btn">Send Deletion Request</a>
             </div>
 
-            <h2 style="margin-top: 40px;">Alternative: Delete via Email</h2>
-            <p>You can also request deletion by sending an email to:</p>
-            <p><strong><a href="mailto:privacy@buerokratai.de?subject=Account%20Deletion%20Request&body=Please%20delete%20my%20BürokratAI%20account.%0A%0AEmail%20used%20for%20registration:%20%0A%0AI%20understand%20this%20action%20is%20permanent.">privacy@buerokratai.de</a></strong></p>
+            <p>Please include in your email:</p>
+            <ul>
+                <li>The email address used for your BürokratAI account</li>
+                <li>Confirmation that you understand this action is permanent</li>
+            </ul>
+
+            <p>We will process your request within <strong>30 days</strong> and send a confirmation email once completed.</p>
 
             <div class="footer">
                 <p><a href="index.html">← Back to Privacy Policy</a></p>
@@ -236,17 +177,5 @@
             </div>
         </div>
     </div>
-
-    <script>
-        // Simple form submission feedback
-        document.getElementById('deleteForm').addEventListener('submit', function(e) {
-            // Form will submit to formsubmit.co
-            // Show success message after short delay
-            setTimeout(function() {
-                document.getElementById('deleteForm').style.display = 'none';
-                document.getElementById('successMessage').style.display = 'block';
-            }, 100);
-        });
-    </script>
 </body>
 </html>
